[package]
name = "passenger_assets"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "passenger_assets"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
mpl-token-metadata = { version="1.13.1", features = [ "no-entrypoint" ] }
anchor-spl = "0.28.0"
